<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atuma.dayspringtutorials.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_partOneCoursesFragment"
            app:destination="@id/partOneCoursesFragment"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/action_nav_home_to_partTwoCoursesFragment"
            app:destination="@id/partTwoCoursesFragment"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/action_nav_home_to_partThreeCoursesFragment"
            app:destination="@id/partThreeCoursesFragment"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.atuma.dayspringtutorials.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.atuma.dayspringtutorials.ui.forum.ForumFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_campus_news"
        android:name="com.atuma.dayspringtutorials.ui.campus_news.CampusNewsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_campus_news" />

    <fragment
        android:id="@+id/nav_accomodation"
        android:name="com.atuma.dayspringtutorials.ui.accomodation.AccommodationFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_accomodation" />

    <fragment
        android:id="@+id/nav_subscription"
        android:name="com.atuma.dayspringtutorials.ui.subscription.SubscriptionFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        tools:layout="@layout/fragment_part_one_courses"
        android:id="@+id/partOneCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partOne.PartOneCoursesFragment"
        android:label="100 Level" />
    <fragment
        tools:layout="@layout/fragment_part_two_courses"
        android:id="@+id/partTwoCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partTwo.PartTwoCoursesFragment"
        android:label="200 Level" />
    <fragment
        tools:layout="@layout/fragment_part_three_courses"
        android:id="@+id/partThreeCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partThree.PartThreeCoursesFragment"
        android:label="300 Level" />


</navigation>