<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/dayspring_login_title"
        android:text="DAYSPRING\n\n\nLog in"
        android:layout_marginStart="20dp"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/username"
        android:layout_margin="5dp"
        android:theme="@style/TextInputLayout"
        android:background="@drawable/wire_button"
        app:endIconMode="clear_text"
        android:layout_below="@id/dayspring_login_title"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:id="@+id/usernameEditText"
            android:padding="5dp"
            android:layout_marginEnd="14dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/password"
        android:theme="@style/TextInputLayout"
        android:background="@drawable/wire_button"
        app:endIconMode="password_toggle"

        android:layout_margin="5dp"
        android:layout_below="@id/username"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"

            android:id="@+id/passwordEditText"
            android:layout_marginEnd="14dp"
            android:drawablePadding="5dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/login"
        android:layout_below="@id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_bgd"
        android:layout_marginBottom="50dp"
        android:enabled="true"
        app:spinning_bar_color="@color/colorPrimaryDark"
        app:spinning_bar_width="5dp"
        app:spinning_bar_padding="3dp"
        android:text="@string/login"
         />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:textSize="16sp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/new_user_text"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal"
            android:text="New User?"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView

            android:id="@+id/create_account_text"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:text=" Create Account"
android:layout_margin="10dp"
            android:layout_toEndOf="@id/new_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>



</RelativeLayout>